# signal-utils

./: CMakeLists.txt  README.md  main.cpp  main_input_handler.cpp  main_input_handler.h
filters/: low_pass_test_filter.h  low_pass_test_filter_5param.h
octave_scripts/: coeffs  create_fir_filter.m  data.txt  demod.txt  filtered.txt  filtered_impulse.txt  imgui.ini  impulse.txt  output.txt  plot_impulse_response.m  plot_output.m  plot_signal_vs_demod.m  plot_signal_vs_filtered.m  signal.txt
sdl_utils/: render_configuration.h  sdl_utils.cpp  sdl_utils.h
sigutil/: build_block.cpp  build_block.h  datapoint.h  envelope_detector.cpp  envelope_detector.h  finite_impuse_response_filter.cpp  finite_impuse_response_filter.h  generator.cpp  generator.h
